--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,7 @@
     <script src="scripts/main/main-ctrl.js"></script>
     <!-- inject:partials -->
     <!-- endinject -->
+    <script src="scripts/directives/atom.js"
     <script src="scripts/directives/fa-svg.js"></script>
     <!-- endbuild -->
 
