--- a/app/index.html
+++ b/app/index.html
@@ -9,13 +9,13 @@
 
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/famous-angular/dist/famous-angular.css">
     <!-- endbower -->
     <!-- endbuild -->
 
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
-    <link rel="stylesheet" href="bower_components/famous-angular/dist/famous-angular.css">
 
     <!-- build:js scripts/modernizr.js -->
     <script src="bower_components/modernizr/modernizr.js"></script>
@@ -62,10 +62,15 @@
     <!-- build:js({app,.tmp}) scripts/main.js -->
     <script src="scripts/famousAngularStarter.js"></script>
     <script src="scripts/main/main-ctrl.js"></script>
+    <script src="scripts/services/timeline.js"></script>
+    <script src="scripts/services/keyframeAnimation.js"></script>
+    <script src="scripts/directives/atom.js"></script>
+    <script src="scripts/directives/ionicTitle.js"></script>
+    <script src="scripts/directives/faKeydown.js"></script>
+
     <!-- inject:partials -->
     <!-- endinject -->
-    <script src="scripts/directives/atom.js"
-    <script src="scripts/directives/fa-svg.js"></script>
+
     <!-- endbuild -->
 
   </body>
