--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,7 @@
     <script src="scripts/services/timeline.js"></script>
     <script src="scripts/services/keyframeAnimation.js"></script>
     <script src="scripts/directives/atom.js"></script>
+    <script src="scripts/directives/atom-face.js"></script>
     <script src="scripts/directives/ionicTitle.js"></script>
     <script src="scripts/directives/faKeydown.js"></script>
 
