--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,12 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
+    <link rel="stylesheet" href="bower_components/reveal.js/css/reveal.min.css">
+    <link rel="stylesheet" href="styles/ionic.css" id="theme">
+
+    <!-- For syntax highlighting -->
+    <link rel="stylesheet" href="styles/zenburn.css">
+
     <!-- If the query includes 'print-pdf', use the PDF print sheet -->
     <script>
         document.write( '<link rel="stylesheet" href="styles/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
@@ -37,8 +43,6 @@
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/famous-angular/dist/famous-angular.css">
-    <link rel="stylesheet" href="bower_components/reveal.js/css/reveal.min.css">
-    <link rel="stylesheet" href="styles/ionic.css">
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -95,15 +99,20 @@
     <script src="scripts/famousAngularStarter.js"></script>
     <script src="scripts/main/main-ctrl.js"></script>
     <script src="scripts/services/timeline.js"></script>
+    <script src="scripts/services/globalTimeline.js"></script>
     <script src="scripts/services/keyframeAnimation.js"></script>
+    <script src="scripts/services/RevealPositionSaver.js"></script>
     <script src="scripts/directives/appContainer.js"></script>
     <script src="scripts/directives/atom.js"></script>
     <script src="scripts/directives/atomFace.js"></script>
     <script src="scripts/directives/topTitle.js"></script>
     <script src="scripts/directives/ionicTitle.js"></script>
-    <script src="scripts/directives/faKeydown.js"></script>
     <script src="scripts/directives/slideGroups.js"></script>
     <script src="scripts/directives/slideGroupHeader.js"></script>
+    <script src="scripts/directives/slideGroup.js"></script>
+    <script src="scripts/directives/whyIonicTimings.js"></script>
+    <script src="scripts/directives/aboutHannah.js"></script>
+    <script src="scripts/directives/aboutLrd.js"></script>
     <!-- inject:partials -->
     <!-- endinject -->
 
