--- a/app/index.html
+++ b/app/index.html
@@ -16,32 +16,12 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <link rel="stylesheet" href="bower_components/reveal.js/css/reveal.min.css">
-    <link rel="stylesheet" href="styles/ionic.css" id="theme">
-
-    <!-- For syntax highlighting -->
-    <link rel="stylesheet" href="styles/zenburn.css">
-
-    <!-- If the query includes 'print-pdf', use the PDF print sheet -->
-    <script>
-        document.write( '<link rel="stylesheet" href="styles/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
-    </script>
-
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-44023830-1', 'ionicframework.com');
-      ga('send', 'pageview');
-
-    </script>
-
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/reveal.js/css/reveal.min.css">
+    <link rel="stylesheet" href="styles/ionic.css" id="theme">
     <link rel="stylesheet" href="bower_components/famous-angular/dist/famous-angular.css">
     <!-- endbower -->
     <!-- endbuild -->
@@ -91,7 +71,11 @@
       //set requirejs's base to where the famous lib folder lives
       require.config({baseUrl: 'bower_components'});
     </script>
+    <script src="bower_components/famous/dist/famous.js"></script>
     <script src="bower_components/famous-angular/dist/famous-angular.js"></script>
+    <script src="scripts/head.min.js"></script>
+    <script src="bower_components/reveal.js/js/reveal.js"></script>
+
     <!-- endbower -->
     <!-- endbuild -->
 
